Fixed the alignment of `PageHeader` children

--- a/Components/Page/Header.scss
+++ b/Components/Page/Header.scss
@@ -18,6 +18,10 @@
     font-size: 20px;
     font-weight: 600;
   }
+
+  a, p {
+    margin: 0;
+  }
 }
 
 .PageHeader-option {
